--- a/BioA/topbar.css
+++ b/BioA/topbar.css
@@ -1,4 +1,26 @@
-/* Add a black background color to the top navigation */
+/*PARAGRAPHS*/
+p {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  margin-right: 20px;
+}
+
+/*H3*/
+h3 {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  line-height: 0.5;
+}
+
+/*TEMPORARY IMAGE*/
+.TempImg {
+  float: left;
+  padding: 10px;
+  padding-right: 20px;
+  padding-top: 20px;
+  width: 200px;
+  height: 300px;
+}
+
+/*NAVBAR*/
 .topnav {
     background-color: #333;
     overflow: hidden;
